--- a/src/pages/thermodynamics/complex_problems.astro
+++ b/src/pages/thermodynamics/complex_problems.astro
@@ -25,7 +25,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
                     <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#example_refrigeration_and_heat_pump_cycles'>Example: Refrigeration and Heat Pump Cycles</a></li>
                 </ul>
             </li>
-            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#(colorred}_textbftransient_systems})'>Transient Systemss</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#transient_systems'>Transient Systems</a>
                 <ul class='list-group list-group-flush py-0'> 
                     <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#transient_vs._steady_state_example'>Transient vs. Steady State Example</a></li>
                 </ul>
@@ -126,7 +126,7 @@ The expression for the coefficient of performance <InlineEquation equation="\\ga
 </p>
 </SubSubSection>
 
-<SubSection title="\\(\\color{red} \\textbf{Transient Systems}\\)" id="(color{red}_textbf{transient_systems})">
+<SubSection title="Transient Systems" id="transient_systems">
 <p>A transient system is a system in which the time derivative related to the system gain or loss (such as mass or energy) is not zero, which is the opposite of a steady state system.</p>
 <h4><strong>Transient Systems:</strong></h4>
  
