--- a/src/pages/thermodynamics/substances.astro
+++ b/src/pages/thermodynamics/substances.astro
@@ -48,15 +48,14 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 <h4><strong>Pure Substance:</strong></h4>
 <p>A pure substance is when a substance occurs in a single phase and is composed of a single type of molecule.</p> 
 
-<TealText><h4><strong>Solid:</strong></h4>
+<h4><strong>Solid:</strong></h4>
 <p>A substance that has a definite shape and volume is a solid.  The molecules in a solid are tightly packed, and cannot move past one another but vibrate.</p> 
 
 <h4><strong>Liquid:</strong></h4>
 <p>A substance that has a definite volume, but no definite shape is a liquid, taking on the shape of their container.  The molecules in a liquid are constantly moving yet still in contact with one another.</p> 
 
 <h4><strong>Gas:</strong></h4>
-<p>A substance with no definite shape or volume, gases take on the shape or volume of the container they are surrounded by.  Molecules can move freely and have negligible intermolecular interactions.</p>
-</TealText> 
+<p>A substance with no definite shape or volume, gases take on the shape or volume of the container they are surrounded by.  Molecules can move freely and have negligible intermolecular interactions.</p> 
 </SubSection>
 
 <SubSubSection title="Phase Diagrams" id="phase_diagrams">
@@ -158,7 +157,7 @@ define the <strong>reduced pressure</strong>, <strong>reduced temperature</stron
 <SubSubSection title="Temperature Effects" id="temperature_effects">
 <p><InlineEquation equation="\\overline{R}" /> defines the proportionality constant that converts the average translational kinetic energy of a single particle, <InlineEquation equation="\\langle KE\\rangle " />, to temperature (<InlineEquation equation="N_A" /> is Avagadro's number)</p>
 
-<DisplayEquation equation='T = \\frac{2}{3} \\frac{N_A}{\\overline{R}}\\langle KE \\rangle.' title="\\(\\color{red} \\textrm{Title?} \\)" background="True"/>
+<DisplayEquation equation='T = \\frac{2}{3} \\frac{N_A}{\\overline{R}}\\langle KE \\rangle.' title="Temperature-Kinetic energy relation" background="True"/>
 
 <p>
 Internal energy <u>of an ideal gas</u> depends only on the total molecular kinetic energy.  Therefore, internal energy is solely a function of the temperature, <InlineEquation equation="T" />, and mass of the gas, <InlineEquation equation="m" />. The rate of change of the specific internal energy, <InlineEquation equation="u" />, where <InlineEquation equation="u = U/m" />, of an ideal gas with respect to <InlineEquation equation="T" /> is its , <InlineEquation equation="c_v" /></p>
