--- a/src/pages/sol/strain.astro
+++ b/src/pages/sol/strain.astro
@@ -120,7 +120,7 @@ Dimensionless [mm/mm, in/in, or %]
 <SubSubSection title="Average Shear Strain" id="average_shear_strain">
 <Image src="/sol/strain/Avg Shear Strain.png" width="5"> Average shear strain</Image>
 
-<DisplayEquation equation="\\begin{align*} &dtan(\\gamma) = \\frac{\\delta}{L} \\xrightarrow{} \\gamma = \\frac{\\delta}{L}	\\\\ &\\gamma = \\alpha + \\beta	 \\\\ &\\gamma = \\frac{\\delta_x}{L_y} + \\frac{\\delta_y}{L_x} \\\\ \\end{align*}" title="Average shear strain." background="True"/>
+<DisplayEquation equation="\\begin{align*} &tan(\\gamma) = \\frac{\\delta}{L} \\xrightarrow{} \\gamma = \\frac{\\delta}{L}	\\\\ &\\gamma = \\alpha + \\beta	 \\\\ &\\gamma = \\frac{\\delta_x}{L_y} + \\frac{\\delta_y}{L_x} \\\\ \\end{align*}" title="Average shear strain." background="True"/>
 
 <Itemize>
     <Item> <strong>Engineering</strong> (shear) strain: Compute angle from length changes and original (undeformed) total length.</Item>
@@ -178,8 +178,6 @@ Dimensionless [mm/mm, in/in, or %]
 <p>
     A clip-on device that can measure very small deformations. Two clips attach to a specimen before testing. The clips are attached to a transducer body. The transducer outputs a voltage. Changes in voltage output are converted to strain.
 </p>
-
-<Image src="/sol/strain/extensometer.jpg" width="2"> A tensile test in the Materials Testing Instructional Laboratory, Talbot Lab, UIUC</Image>
 
 <Image src="/sol/strain/extensometer.jpg" width="2"> A tensile test in the Materials Testing Instructional Laboratory, Talbot Lab, UIUC</Image>
 
