--- a/src/components/Warning.astro
+++ b/src/components/Warning.astro
@@ -14,9 +14,9 @@ const { id, title, remove_button="False"} = Astro.props;
 <div class="my-2 text-black">
     <div class="background-red d-flex flex-column">
         <div id={id} class='overflow-hidden d-flex flex-row align-items-center'>
-            <button class={remove_button != "False" ? "btn btn-secondary d-none" : "btn btn-secondary"} id={'warning_btn_'+id}>+</button>
+            <button class={remove_button != "False" ? "btn btn-secondary d-none fw-bold" : "btn btn-secondary fw-bold"} id={'warning_btn_'+id}>+</button>
             <div class="px-2">
-                {"Warning: " + title}{<small>{` #${id}`}</small>}
+                <span set:html={"<strong>Warning:</strong> " + title}></span>{<small>{` #${id}`}</small>}
             </div>
         </div>
 
