--- a/src/pages/about/troubleshooting.astro
+++ b/src/pages/about/troubleshooting.astro
@@ -1,5 +1,5 @@
 ---
-import 'Layout' from '../../../Layouts/Layout.astro'
+import 'Layout' from '../../layouts/Layout.astro'
 ---
 
 <Layout title="Troubleshooting & Common Problems">
