--- a/src/components/Plotly.astro
+++ b/src/components/Plotly.astro
@@ -4,7 +4,7 @@ const {file_path, id, height=400} = Astro.props;
 
 <script src="/plotly.js" is:inline></script>
 
-<div id={id} class="overflow-hidden d-flex flex-column align-items-center">
+<div id={'plotly_'+id} class="overflow-hidden d-flex flex-column align-items-center">
     <div class="spinner-border" role="status">
         <span class="visually-hidden">Loading...</span>
     </div>      
@@ -24,13 +24,13 @@ const {file_path, id, height=400} = Astro.props;
         console.log(file_path)
 
         var data = $.getJSON(`/${file_path}`).done(function(){
-            document.querySelector(`#${id}`).innerHTML = "";
+            document.querySelector(`#plotly_${id}`).innerHTML = "";
             console.log(JSON.parse(data['responseText']))
-            Plotly.newPlot(`${id}`, JSON.parse(data['responseText']), layout ,{responsive: true})
-            Plotly.Plots.resize(`${id}`)
+            Plotly.newPlot(`plotly_${id}`, JSON.parse(data['responseText']), layout ,{responsive: true})
+            Plotly.Plots.resize(`plotly_${id}`)
         });
 
-        $(window).on("resize", function(){Plotly.Plots.resize(`${id}`)})
+        $(window).on("resize", function(){Plotly.Plots.resize(`plotly_${id}`)})
 
         $( window ).on( "resize", function() {
             let body_width;
@@ -38,9 +38,9 @@ const {file_path, id, height=400} = Astro.props;
             graph_width = body_width - 24;
             if (body_width < 992){
                 //document.querySelector(`#${id}`).style = `max-width: ${graph_width}px`;
-                document.querySelector(`#${id}`).style = `max-width: ${graph_width}px; overflow-x: auto;`;
+                document.querySelector(`#plotly_${id}`).style = `max-width: ${graph_width}px; overflow-x: auto;`;
             }else{
-                document.querySelector(`#${id}`).style = `width: 100%; overflow-x: auto;`
+                document.querySelector(`#plotly_${id}`).style = `width: 100%; overflow-x: auto;`
             }
             }  
         );
