--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -129,6 +129,7 @@ const pagename = cleaned[1]
 	:root {
 		--illini-orange: #ff5f05;
 		--illini-blue: #13294B;
+        --altgeld-orange: #c84113;
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
 		--accent-dark: 49, 10, 101;
