--- a/src/pages/about/instructions/mechse.astro
+++ b/src/pages/about/instructions/mechse.astro
@@ -76,7 +76,7 @@ import SubSubSection from "../../../components/SubSubSection.astro"
         <CodeBox language="plaintext" code=`
         public
         |--> <course_abbreviation>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|--> <course_page>_Figs
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|--> <course_page>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|--> <image>.png
         src
         |--> components
