Setting up pages for ME 370 (md) and ME 371 (mf)
Set up pages, populated mf/stress concentrations

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -442,6 +442,42 @@ import Searchbar from "./Searchbar.astro";
                     </div>
                 </div>
             </li>
+
+            <li class="dropdown mega nav-item ">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="md">
+                    <span>Mechanism Design</span>
+                </a>
+                <div class="dropdown-menu tile-list px-2" id="mainnav-<md>">
+                    <div class="d-flex">
+                        <section class="tile menu white-box col">
+                            <h2><a href="/md">Mechanism Design</a></h2>
+                            <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
+                                <li><a href="/md/Graphical_Linkage_Sythesis?origin=sidebar">Graphical Linkage Synthesis</a></li>
+
+                            </ol>
+                        </section>
+                    </div>
+                </div>
+            </li>
+
+            <li class="dropdown mega nav-item ">
+                <a class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false" aria-label="About" class-value="mf">
+                    <span>Machine Failure</span>
+                </a>
+                <div class="dropdown-menu tile-list px-2" id="mainnav-<md>">
+                    <div class="d-flex">
+                        <section class="tile menu white-box col">
+                            <h2><a href="/mf">Machine Failure</a></h2>
+                            <ol style="column-fill: balance; columns: 3 <= how many columns do you want your menu to have?;" class="course-menu">
+                                <li><a href="/mf/Stress_Concentrations?origin=sidebar">Stress Concentrations</a></li>
+
+                            </ol>
+                        </section>
+                    </div>
+                </div>
+            </li>
+
+
             <!-- ADD YOUR COURSE HERE -->
         </ul>
         <span class="navbar-text d-flex flex-row justify-content-center align-items-center" style="padding: 8px 10px 10px 10px;"><a class="me-2 fw-bold nav-link fontsize-11" href="/about">About</a></span>
