small issue in mf

--- a/src/pages/mf/Stress_Concentrations.astro
+++ b/src/pages/mf/Stress_Concentrations.astro
@@ -48,6 +48,7 @@ import Item from "../../components/Item.astro";
             you make a small cut (a notch) first, the tear spreads easily from there. This happens because stress
             (force per unit area) gets concentrated around sharp edges or holes.
         </p>
+    </Section>
         <SubSection id="subsection1_1" title="Actual Stress Distribution vs Nominal Stress">
             <p>
                 Imagine a metal plate like the one shown in Figure 1, with a hole in the middle, being pulled from both ends.
