--- a/src/pages/mf.astro
+++ b/src/pages/mf.astro
@@ -1,6 +1,6 @@
 ---
 
-import Layout from "../layouts/Layout.astro"
+import Layout from "../layouts/CourseMenuLayout.astro"
 import "../../public/static/css/course_home_pages.css"
 ---
 
