Fixed error with a symbol on mf/Stress_Concentrations Page

--- a/src/pages/mf/Stress_Concentrations.astro
+++ b/src/pages/mf/Stress_Concentrations.astro
@@ -144,7 +144,7 @@ import Item from "../../components/Item.astro";
             In figure 2 we can see this process in a little more detail:
             <Itemize>
                 <Item>The orange curve shows the stress that is applied to the object assuming the material stays elastic (no permanent deformation). </Item>
-                <Item>The vertical dashed lines, <InlineEquation equation="\\sigma_{nom}"/>,<InlineEquation equation="\S_y"/>,and <InlineEquation equation="\\sigma_{max"/> represent the nominal stress,
+                <Item>The vertical dashed lines, <InlineEquation equation="\\sigma_{nom}"/>,<InlineEquation equation="\S_y"/>,and <InlineEquation equation="\\sigma_{max}"/> represent the nominal stress,
                     the yield strength and the maximum stress respectively</Item>
                 <Item>he blue curve shows the redistributed stress that the material experiences after plastically
                     deforming and redistributing the stress. Note that the nominal stress is the same, as the decrease
